# Sylph_IVI-Cluster_System

./: CMakeLists.txt  LICENSE  README.md  assets.qrc  setup_bluetooth_gps.sh
src/: main.cpp
src/Bluetooth/: BluetoothCard.qml  BluetoothController.cpp  BluetoothController.h
src/Climate/: AcDial.qml  ClimateCard.qml  FanSpeedArc.qml  HvacModeButton.qml  HvacflowButton.qml
src/Core/: AppConfig.cpp  AppConfig.h  AudioFocusManager.cpp  AudioFocusManager.h  CardSwiper.qml  CircularSelector.qml  DoorStatusPopup.qml  DoorUartReader.cpp  DoorUartReader.h  GlassKeyboard.qml  GlassPanel.qml  GlassSwitch.qml  HomeCard.qml  Main.qml  MediaButton.qml  SidebarMenu.qml  VehicleController.cpp  VehicleController.h
src/LocalMedia/: LocalMediaCard.qml  LocalMediaController.cpp  LocalMediaController.h
src/Navigation/: BluetoothGpsController.cpp  BluetoothGpsController.h  DirectiveCard.qml  GlassKeyboard.qml  MapActionsPanel.qml  NavigationCard.qml  TripProgressCard.qml
src/Phone/: ContactsCard.qml  DialerCard.qml  PhoneController.cpp  PhoneController.h  RecentsCard.qml
src/Radio/: RadioCard.qml  RadioController.cpp  RadioController.h  RadioStationsModel.cpp  RadioStationsModel.h
src/Settings/: AudioSettingsCard.qml  AudioSettingsController.cpp  AudioSettingsController.h  DisplaySettingsCard.qml  SettingsAboutPane.qml  SettingsBluetoothPane.qml  SettingsCard.qml  SettingsWeatherPane.qml  SettingsWifiPane.qml  TimeSettingsPane.qml
src/Weather/: AtmosBackend.cpp  AtmosBackend.h  WeatherCard.qml
src/Wifi/: WifiController.cpp  WifiController.h
